adjustments for skinning new csb

--- a/app/views/epub_ebooks/_cozy_controls_top.html.erb
+++ b/app/views/epub_ebooks/_cozy_controls_top.html.erb
@@ -1,47 +1,64 @@
-        // Close reader/Return to previous screen widget
+        // Close/Previous Page [X]
         cozy.control.widget.button({
-          region: 'top.header.left',
+          region: 'left.sidebar',
           data: { label: '<i class="icon-x oi" data-glyph="x" aria-hidden="true"></i>'},
           template: '<button class="button--sm cozy-close" data-toggle="button" data-slot="label" aria-label="Close reader"></button>',
           onClick: function() { window.location = "<%= "#{@back_link}" %>"; }
         }).addTo(reader);
 
-        // Press brand widget
-        // TODO: only show logo for publishers that also have CSS overrides.
-        <% if defined? @subdomain %>
-        // only include logos for heb, nyupress, leverpress, rekihaku, sussex and gabii at this point
-          <% if %w[heb nyupress gabii michigan leverpress rekihaku sussex].include? @subdomain %>
-            cozy.control.widget.panel({
-              region: 'top.header.left',
-              template: '<div class="logo"><%= link_to (image_tag press_presenter.logo, role: 'link', alt: @subdomain + ' catalog on Fulcrum'), URI.join(main_app.root_url, @subdomain).to_s %></div>',
-              data: { title: "<%= @subdomain %>" }
-            }).addTo(reader);
-          <% end %>
-        <% end %>
-
-        // Book/chapter title widget
-        cozy.control.title({ region: 'top.header.left' }).addTo(reader);
-
-        // Altmetric and Dimensions widgets
-        cozy.control.widget.panel({
-          region: 'top.header.right',
-          className: 'cozy-container-altmetric',
-          template: '<div data-badge-type="1" data-isbn="<%= @parent_presenter.isbn_noformat.first %>" data-hide-no-mentions="true" class="altmetric-embed"></div>',
-        }).addTo(reader);
-
-        <% if @parent_presenter.doi.present? %>
-          cozy.control.widget.panel({
-            region: 'top.header.right',
-            className: 'cozy-container-dimensions',
-            template: '<span class="__dimensions_badge_embed__" data-doi="<%= @parent_presenter.doi_path %>" data-hide-zero-citations="true" data-legend="never" data-style="large_rectangle"></span>',
-          }).addTo(reader);
-        <% end %>
-
-        // MOBILE ONLY
-        // Close reader/Return to previous screen widget
+        // Mobile Close/Previous Page [X]
         cozy.control.widget.button({
-          region: 'top.toolbar.left',
+          region: 'left.sidebar',
           data: { label: '<i class="icon-x oi" data-glyph="x" aria-hidden="true"></i>'},
           template: '<button class="button--sm cozy-close mobile" data-toggle="button" data-slot="label" aria-label="Close reader"></button>',
           onClick: function() { window.location = "<%= "#{@back_link}" %>"; }
+        }).addTo(reader);
+
+        // Table of contents [Outline Icon]
+        <% if @parent_presenter.epub? %>
+        cozy.control.contents({ region: 'left.sidebar', skipLink: '.skip' }).addTo(reader);
+        <% else %>
+        var contents = new PDFContents({ region: 'left.sidebar', skipLink: '.skip' });
+        contents.addTo(reader);
+        <% end %>
+
+        // Search [Magnifying Glass Icon]
+        <% unless Heliotrope::Application.config.cozy_epub_engine == 'readium' %>
+          <% if @parent_presenter.epub? %>
+          cozy.control.search({
+            region: 'left.sidebar',
+            searchUrl: "<%= @search_url %>"
+          }).addTo(reader);
+          <% else %>
+          var search = new PDFSearch({ region: 'left.sidebar' });
+          search.addTo(reader);
+          <% end %>
+        <% end %>
+
+        // Bibliographic Information [Info Icon]
+
+
+        // Notes [Notes]
+
+
+        // Maps [Geo Icon]
+
+
+        // Resources [File Icon]
+        <% if @parent_presenter.assets? %>
+        cozy.control.widget.button({
+          region: 'left.sidebar',
+          template: '<button class="button--sm media" data-toggle="button" aria-label="Resources">Resources</button>',
+          onClick: function() { window.location = "<%= "#{@parent_presenter.catalog_url + '#resources'}" %>"; }
+        }).addTo(reader);
+        <% end %>
+
+        // Fullscreen [Diverging Arrows Icon]
+        cozy.control.fullscreen({ region: 'left.sidebar' }).addTo(reader);
+
+        // Feedback and Help widget [?]
+        cozy.control.widget.panel({
+          region: 'left.sidebar',
+          className: 'cozy-panel-feedback',
+          template: '<a href="https://umich.qualtrics.com/jfe/form/SV_3KSLynPij0fqrD7?publisher=<%= @subdomain %>&noid=<%= @presenter.id %>&title=<%= @parent_presenter.page_title %>&url=<%= request.original_url %>" target="_blank" title="Report a problem or share feedback"><i class="icon-comment-square oi" data-glyph="comment-square" aria-hidden="true"></i></a>',
         }).addTo(reader);
