--- a/app/views/epub_ebooks/show.html.erb
+++ b/app/views/epub_ebooks/show.html.erb
@@ -139,7 +139,7 @@
 
         // pass the reference to the panel
         var annotation_tool = new AnnotationTool({
-          region: 'top.toolbar.left',
+          region: 'left.sidebar',
           $panel: $panel
         })
         annotation_tool.addTo(reader);
