HELIO-3958 Map DLPS_instituion_id to affiliations scaffold

--- a/app/views/fulcrum/_jobs.html.erb
+++ b/app/views/fulcrum/_jobs.html.erb
@@ -143,3 +143,13 @@
     <% end %>
   </div>
 </div>
+<div class="col-sm-6">
+  <div class="row">
+    <h2>Affiliations</h2>
+  </div>
+  <div class="row">
+    <%= link_to(fulcrum_exec_path(:seed_institution_affiliations), method: :get, class: "btn btn-default", data: { confirm: 'Are you sure?' }) do %>
+      <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Seed Institution Affiliations
+    <% end %>
+  </div>
+</div>
