--- a/app/views/greensub/institution_affiliations/edit.html.erb
+++ b/app/views/greensub/institution_affiliations/edit.html.erb
@@ -4,3 +4,5 @@
 
 <%= link_to 'Show', greensub_institution_affiliation_path(@institution_affiliation) %> |
 <%= link_to 'Back', greensub_institution_affiliations_path %>
+
+<div>&nbsp;</div>
