--- a/app/views/greensub/institution_affiliations/new.html.erb
+++ b/app/views/greensub/institution_affiliations/new.html.erb
@@ -3,3 +3,5 @@
 <%= render 'form', institution_affiliation: @institution_affiliation %>
 
 <%= link_to 'Back', greensub_institution_affiliations_path %>
+
+<div>&nbsp;</div>
