--- a/app/views/fulcrum/_institution_affiliations.html.erb
+++ b/app/views/fulcrum/_institution_affiliations.html.erb
@@ -26,7 +26,7 @@
             <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span> Show
           <% end %>
         </td>
-        <td><%= institution_affiliation.institution.name %></td>
+        <td><%= link_to institution_affiliation.institution.name, greensub_institution_path(institution_affiliation.institution)  %></td>
         <td><%= institution_affiliation.dlps_institution_id %></td>
         <td><%= institution_affiliation.affiliation %></td>
       </tr>
