--- a/app/views/greensub/institution_affiliations/index.html.erb
+++ b/app/views/greensub/institution_affiliations/index.html.erb
@@ -25,7 +25,7 @@
 
   <% @institution_affiliations.each do |institution_affiliation| %>
     <div class="col-md-1"><%= institution_affiliation.id %></div>
-    <div class="col-md-5"><%= institution_affiliation.institution.name %></div>
+    <div class="col-md-5"><%= link_to institution_affiliation.institution.name, greensub_institution_path(institution_affiliation.institution) %></div>
     <div class="col-md-2"><%= institution_affiliation.dlps_institution_id %></div>
     <div class="col-md-2"><%= institution_affiliation.affiliation %></div>
     <div class="col-md-2">
