--- a/app/views/greensub/institution_affiliations/show.html.erb
+++ b/app/views/greensub/institution_affiliations/show.html.erb
@@ -2,13 +2,13 @@
 <div id="maincontent">
   <h1>Institution Affiliation</h1>
   <div class="col-md-1"><em>ID</em></div>
-  <div class="col-md-11">&nbsp;<%= @institution_affiliation.id %></div>
+  <div class="col-md-11"><%= @institution_affiliation.id %></div>
   <div class="col-md-1"><em>Institution</em></div>
-  <div class="col-md-11">&nbsp;<%= @institution_affiliation.institution.id %></div>
+  <div class="col-md-11"><%= link_to @institution_affiliation.institution.name, greensub_institution_path(@institution_affiliation.institution) %></div>
   <div class="col-md-1"><em>DLPS ID</em></div>
-  <div class="col-md-11">&nbsp;<%= @institution_affiliation.dlps_institution_id %></div>
+  <div class="col-md-11"><%= @institution_affiliation.dlps_institution_id %></div>
   <div class="col-md-1"><em>Affiliation</em></div>
-  <div class="col-md-11">&nbsp;<%= @institution_affiliation.affiliation %></div>
+  <div class="col-md-11"><%= @institution_affiliation.affiliation %></div>
   <div class="col-md-12"><br/></div>
   <div class="col-md-12">
     <%= link_to 'Edit', edit_greensub_institution_affiliation_path(@institution_affiliation) %>
