--- a/app/views/greensub/institutions/index.html.erb
+++ b/app/views/greensub/institutions/index.html.erb
@@ -13,12 +13,13 @@
           <div>ID</div>
           <div>&nbsp;</div>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-7">
           <% size = 24 %>
           <div><div class="col-md-2">Identifier</div><div class="col-md-10"><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></div></div>
           <div><div class="col-md-2">Name</div><div class="col-md-10"><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></div></div>
           <div><div class="col-md-2">Entity ID</div><div class="col-md-10"><input type="text" name="entity_id_like" value="<%= params[:entity_id_like] %>" size="<%= size %>" aria-label="entity_id_like"></div></div>
         </div>
+        <div class="col-md-2">Affiations</div>
         <div class="col-md-2"><div>Licenses</div><div>&nbsp;</div><div><button name="submit" type="submit" value="filter">Filter</button></div>
         </div>
       </div>
@@ -30,10 +31,15 @@
   <% @institutions.each do |institution| %>
     <div class="col-md-10">
       <div class="col-md-1"><%= institution.id %></div>
-      <div class="col-md-9">
+      <div class="col-md-7">
         <div><%= institution.identifier %></div>
         <div><%= institution.name %></div>
         <div><%= institution.entity_id %></div>
+      </div>
+      <div class="col-md-2">
+        <% institution.institution_affiliations.each do |institution_affiliation| %>
+          <div><%= link_to institution_affiliation.dlps_institution_id.to_s + ":" + institution_affiliation.affiliation, greensub_institution_affiliation_path(institution_affiliation) %></div>
+        <% end %>
       </div>
       <div class="col-md-2"><%= institution.licenses.count %></div>
     </div>
