--- a/app/views/fulcrum/_individuals.html.erb
+++ b/app/views/fulcrum/_individuals.html.erb
@@ -1,4 +1,4 @@
-<% individuals = Greensub::Individual.filter(identifier_like: params[:identifier_like], name_like: params[:name_like], email_like: params[:email_like]).order(identifier: :asc).page(params[:page]) %>
+<% individuals = Greensub::Individual.filter_by(identifier_like: params[:identifier_like], name_like: params[:name_like], email_like: params[:email_like]).order(identifier: :asc).page(params[:page]) %>
 <h1>Individuals</h1>
 <form name="filter" method="get" action="<%= fulcrum_partials_path(:individuals) %>">
   <table class="table table-striped" summary="Individual List">
