--- a/app/views/fulcrum/_institution_affiliations.html.erb
+++ b/app/views/fulcrum/_institution_affiliations.html.erb
@@ -1,4 +1,4 @@
-<% institution_affiliations = Greensub::InstitutionAffiliation.filter(institution_id_like: params[:institution_id_like], dlps_institution_id_like: params[:dlps_institution_id_like], affiliation_like: params[:affiliation_like]).order(institution_id: :asc).page(params[:page]) %>
+<% institution_affiliations = Greensub::InstitutionAffiliation.filter_by(institution_id_like: params[:institution_id_like], dlps_institution_id_like: params[:dlps_institution_id_like], affiliation_like: params[:affiliation_like]).order(institution_id: :asc).page(params[:page]) %>
 <h1>Institution Affiliations</h1>
 <form name="filter" method="get" action="<%= fulcrum_partials_path(:institution_affiliations) %>">
   <table class="table table-striped" summary="Institution Affiliation List">
