--- a/app/views/fulcrum/_institutions.html.erb
+++ b/app/views/fulcrum/_institutions.html.erb
@@ -1,4 +1,4 @@
-<% institutions = Greensub::Institution.filter(identifier_like: params[:identifier_like], name_like: params[:name_like], entity_id_like: params[:entity_id_like]).order(identifier: :asc).page(params[:page]) %>
+<% institutions = Greensub::Institution.filter_by(identifier_like: params[:identifier_like], name_like: params[:name_like], entity_id_like: params[:entity_id_like]).order(identifier: :asc).page(params[:page]) %>
 <h1>Institutions</h1>
 <form name="filter" method="get" action="<%= fulcrum_partials_path(:institutions) %>">
   <table class="table table-striped" summary="Institution List">
