--- a/app/views/fulcrum/_licenses.html.erb
+++ b/app/views/fulcrum/_licenses.html.erb
@@ -1,5 +1,5 @@
 <%
-  licenses = Greensub::License.filter(type_like: params[:type_like]).order(type: :asc).page(params[:page])
+  licenses = Greensub::License.filter_by(type_like: params[:type_like]).order(type: :asc).page(params[:page])
 %>
 <h1>Licenses</h1>
 <form name="filter" method="get" action="<%= fulcrum_partials_path(:licenses) %>">
