--- a/app/views/fulcrum/_tokens.html.erb
+++ b/app/views/fulcrum/_tokens.html.erb
@@ -11,7 +11,7 @@
     <th><%= text_field(:user, :token, size: size * 4, value: current_user.token, disabled: true) %></th>
   </tr>
 </table>
-<% users = User.filter(identifier_like: params[:identifier_like], name_like: params[:name_like], email_like: params[:email_like]).order(email: :asc).page(params[:page]) %>
+<% users = User.filter_by(identifier_like: params[:identifier_like], name_like: params[:name_like], email_like: params[:email_like]).order(email: :asc).page(params[:page]) %>
 <h2>Tokenize</h2>
 <form name="filter" method="get" action="<%= fulcrum_partials_path(:tokens) %>">
   <table class="table table-striped" summary="Tokenize List">
