--- a/app/views/greensub/licenses/index.html.erb
+++ b/app/views/greensub/licenses/index.html.erb
@@ -38,18 +38,15 @@
       <div class="col-md-1"><%= license.label %></div>
       <div class="col-md-5">
         <% if license.individual? %>
-          <%= link_to "#{license.individual.identifier}", greensub_individual_path(license.individual) %>
+          <%= link_to "#{license.licensee.identifier}", greensub_individual_path(license.licensee) %>
         <% end %>
         <% if license.institution? %>
-          <%= link_to "#{license.institution.name}", greensub_institution_path(license.institution) %>
+          <%= link_to "#{license.licensee.name}", greensub_institution_path(license.licensee) %>
         <% end %>
         &nbsp;
       </div>
       <div class="col-md-5">
-        <% if license.product? %>
-          <%= link_to "#{license.product.identifier}", greensub_product_path(license.product) %>
-        <% end %>
-        &nbsp;
+        <%= link_to "#{license.product.identifier}", greensub_product_path(license.product) %>
       </div>
     </div>
     <div class="col-md-2">
